--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="https://www.citypng.com/public/uploads/preview/red-youtube-logo-symbol-701751694792489qxkccchok1.png" alt="YT logo" height="220px" width="420px">
         <form action="https://www.youtube.com/results?">
             <input type="text" name="search_query">
-            <button>submitt</button>
+            <button>submit</button>
         </form>
         
     </center>
